--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -176,6 +176,9 @@ rules:
   func-style:
     - error
     - declaration
+  function-paren-newline:
+    - error
+    - never
   id-blacklist: off
   id-length: off
   id-match: off
