--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -49,7 +49,7 @@ rules:
   block-scoped-var: error
   class-methods-use-this: error
   complexity: off
-  consistent-return: error
+  consistent-return: off
   curly: error
   default-case: error
   dot-location: error
@@ -198,9 +198,7 @@ rules:
   max-params: off
   max-statements: off
   max-statements-per-line: error
-  multiline-ternary:
-    - error
-    - always-multiline
+  multiline-ternary: off
   new-cap: error
   new-parens: error
   newline-per-chained-call: off
