--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,10 +1,14 @@
-parserOptions:
-  ecmaVersion: 2017
-  sourceType: module
 env:
   browser: true
   es6: true
   node: true
+parserOptions:
+  ecmaFeatures:
+    jsx: true
+  ecmaVersion: 2017
+  sourceType: module
+plugins:
+  - react
 rules:
   # Possible Errors
   for-direction: error
@@ -25,7 +29,10 @@ rules:
   no-empty-character-class: error
   no-ex-assign: off
   no-extra-boolean-cast: error
-  no-extra-parens: error
+  no-extra-parens:
+    - error
+    - all
+    - ignoreJSX: multi-line
   no-extra-semi: error
   no-func-assign: error
   no-invalid-regexp: error
@@ -226,9 +233,7 @@ rules:
   nonblock-statement-body-position: error
   object-curly-newline:
     - error
-    - ObjectExpression:
-        minProperties: 1
-      ObjectPattern: never
+    - consistent: true
   object-curly-spacing: error
   object-property-newline: error
   one-var:
@@ -236,7 +241,9 @@ rules:
     - never
   one-var-declaration-per-line: error
   operator-assignment: error
-  operator-linebreak: error
+  operator-linebreak:
+    - error
+    - after
   padded-blocks:
     - error
     - never
@@ -300,7 +307,87 @@ rules:
   prefer-template: error
   require-yield: error
   rest-spread-spacing: error
-  sort-imports: error
+  sort-imports: off
   symbol-description: error
   template-curly-spacing: error
   yield-star-spacing: error
+
+  # React
+  react/boolean-prop-naming: off
+  react/button-has-type: error
+  react/default-props-match-prop-types: error
+  react/destructuring-assignment: off
+  react/display-name: error
+  react/forbid-component-props: off
+  react/forbid-dom-props: off
+  react/forbid-elements: off
+  react/forbid-prop-types: error
+  react/forbid-foreign-prop-types: error
+  react/no-access-state-in-setstate: off
+  react/no-array-index-key: error
+  react/no-children-prop: error
+  react/no-danger: off
+  react/no-danger-with-children: error
+  react/no-deprecated: error
+  react/no-did-mount-set-state: error
+  react/no-did-update-set-state: error
+  react/no-direct-mutation-state: error
+  react/no-find-dom-node: error
+  react/no-is-mounted: error
+  react/no-multi-comp: error
+  react/no-redundant-should-component-update: error
+  react/no-render-return-value: error
+  react/no-set-state: off
+  react/no-typos: error
+  react/no-string-refs: error
+  # following rule is not yet implemented (https://github.com/yannickcr/eslint-plugin-react/issues/1596)
+  # react/no-this-in-sfc: error
+  react/no-unescaped-entities: error
+  react/no-unknown-property: error
+  react/no-unused-prop-types: error
+  react/no-unused-state: error
+  react/no-will-update-set-state: error
+  react/prefer-es6-class: error
+  react/prefer-stateless-function: off
+  react/prop-types: error
+  react/react-in-jsx-scope: error
+  react/require-default-props: off
+  react/require-optimization: off
+  react/require-render-return: error
+  react/self-closing-comp: error
+  react/sort-comp: error
+  react/sort-prop-types: error
+  react/void-dom-elements-no-children: error
+
+  # JSX
+  react/jsx-boolean-value: error
+  react/jsx-closing-bracket-location: error
+  react/jsx-closing-tag-location: error
+  react/jsx-curly-spacing: error
+  react/jsx-equals-spacing: error
+  react/jsx-filename-extension: error
+  react/jsx-first-prop-new-line: error
+  react/jsx-handler-names: error
+  react/jsx-indent:
+    - error
+    - tab
+  react/jsx-indent-props:
+    - error
+    - tab
+  react/jsx-key: error
+  react/jsx-max-props-per-line:
+    - error
+    - maximum: 2
+  react/jsx-no-bind: off
+  react/jsx-no-comment-textnodes: error
+  react/jsx-no-duplicate-props: error
+  react/jsx-no-literals: off
+  react/jsx-no-target-blank: error
+  react/jsx-no-undef: error
+  react/jsx-one-expression-per-line: off
+  react/jsx-curly-brace-presence: error
+  react/jsx-pascal-case: error
+  react/jsx-sort-props: off
+  react/jsx-tag-spacing: error
+  react/jsx-uses-vars: error
+  react/jsx-wrap-multilines: error
