--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -199,6 +199,7 @@ rules:
   line-comment-position: off
   linebreak-style: error
   lines-around-comments: off
+  lines-between-class-members: error
   max-depth: off
   max-len: off
   max-lines: off
@@ -206,6 +207,9 @@ rules:
   max-params: off
   max-statements: off
   max-statements-per-line: error
+  multiline-comment-style:
+    - error
+    - separate-lines
   multiline-ternary: off
   new-cap: error
   new-parens: error
