--- a/.i3/config
+++ b/.i3/config
@@ -4,13 +4,13 @@ font pango:FuraCode Nerd Font Mono 8
 
 floating_modifier $mod
 
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec tilix
 
 bindsym $mod+q kill
 
 # dmenu
-bindsym $mod+semicolon exec i3-dmenu-desktop
-bindsym $mod+shift+semicolon exec dmenu_run
+bindsym $mod+semicolon exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+shift+semicolon exec --no-startup-id dmenu_run
 
 # change focus
 bindsym $mod+h focus left
@@ -40,7 +40,7 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+p focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -156,8 +156,13 @@ exec --no-startup-id /usr/lib/gsd-sound
 exec --no-startup-id /usr/lib/gsd-test-input-helper
 exec --no-startup-id /usr/lib/gsd-xsettings
 
+exec --no-startup-id bing-background
+
 # set background
 exec --no-startup-id ~/.fehbg
 
 # enter tabbed mode
 workspace_layout tabbed
+
+# start compton
+exec --no-startup-id compton
