--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -115,6 +115,17 @@
 				},
 			],
 		},
+		// sort
+		{
+			"before": [
+				"s",
+			],
+			"commands": [
+				{
+					"command": ":sort",
+				},
+			],
+		},
 	],
 	// window
 	"window.menuBarVisibility": "toggle",
