reset hlclear on <Esc> in normal mode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,6 +107,13 @@
 			"commands": [{"command": ":tabn"}],
 		},
 	],
+	"vim.normalModeKeyBindingsNonRecursive": [
+		// reset hlsearch
+		{
+			"before": ["<Esc>"],
+			"after": ["/", "<Esc>", "<Esc>"],
+		},
+	],
 	"vim.sneak": true,
 	"vim.substituteGlobalFlag": true,
 	"vim.surround": true,
