don't highlight occurences

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 	"editor.insertSpaces": false,
 	"editor.minimap.showSlider": "always",
 	"editor.multiCursorModifier": "ctrlCmd",
+	"editor.occurrencesHighlight": false,
 	"editor.quickSuggestions": {
 		"other": true,
 		"comments": true,
