unselect after sort

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -132,7 +132,7 @@
 		// sort
 		{
 			"before": ["s"],
-			"commands": [{"command": ":sort"}],
+			"after": [":", "s", "o", "r", "t", "<CR>"],
 		},
 	],
 	// window
