--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -39,7 +39,8 @@ font:
   scale_with_dpi: true
 
 # Should display the render timer
-render_timer: false
+debug:
+  render_timer: false
 
 # Colors (Modified One Dark)
 colors:
