--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -18,13 +18,13 @@ draw_bold_text_with_bright_colors: true
 
 font:
   normal:
-    family: FuraCode Nerd Font Mono
+    family: CodeNewRoman Nerd Font Mono
 
   bold:
-    family: FuraCode Nerd Font Mono
+    family: CodeNewRoman Nerd Font Mono
 
   italic:
-    family: FuraCode Nerd Font Mono
+    family: CodeNewRoman Nerd Font Mono
 
   size: 11.0
 
