--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,14 +1,16 @@
 env:
   browser: true
-  es6: true
   node: true
+  es2020: true
+
 parserOptions:
   ecmaFeatures:
     jsx: true
-  ecmaVersion: 2017
   sourceType: module
+
 plugins:
   - react
+
 rules:
   # Possible Errors
   for-direction: error
@@ -21,6 +23,7 @@ rules:
   no-control-regex: error
   no-debugger: off
   no-dupe-args: error
+  no-dupe-else-if: error
   no-dupe-keys: error
   no-duplicate-case: error
   no-empty:
@@ -35,19 +38,24 @@ rules:
     - ignoreJSX: multi-line
   no-extra-semi: error
   no-func-assign: error
+  no-import-assign: error
+  no-inner-declarations: error
   no-invalid-regexp: error
   no-irregular-whitespace: error
+  no-misleading-character-class: error
   no-obj-calls: error
   no-prototype-builtins: error
   no-regex-spaces: error
+  no-setter-return: error
   no-sparse-arrays: error
   no-template-curly-in-string: error
   no-unexpected-multiline: error
   no-unreachable: error
   no-unsafe-finally: error
   no-unsafe-negation: error
+  no-useless-backreference: error
+  require-atomic-updates: error
   use-isnan: error
-  valid-jsdoc: error
   valid-typeof: error
 
   # Best Practices
@@ -59,13 +67,18 @@ rules:
   consistent-return: off
   curly: error
   default-case: error
+  default-case-last: error
+  default-param-last: error
   dot-location: error
   dot-notation: error
   eqeqeq: error
+  grouped-accessor-pairs: error
   guard-for-in: off
   max-classes-per-file: off
+  no-alert: off
   no-caller: error
   no-case-declarations: error
+  no-constructor-return: error
   no-div-regex: off
   no-else-return: error
   no-empty-function: error
@@ -102,23 +115,28 @@ rules:
   no-return-await: error
   no-script-url: error
   no-self-assign: error
+  no-self-compare: error
   no-sequences: error
   no-throw-literal: error
   no-unmodified-loop-condition: off
   no-unused-expressions: error
   no-unused-labels: error
   no-useless-call: error
+  no-useless-catch: error
   no-useless-concat: error
   no-useless-escape: error
   no-useless-return: error
   no-void: error
   no-warning-comments: off
   no-with: error
+  prefer-named-capture-group: error
   prefer-promise-reject-errors: error
+  prefer-regex-literals: error
   radix:
     - error
     - as-needed
   require-await: error
+  require-unicode-regexp: error
   vars-on-top: off
   wrap-iife:
     - error
@@ -130,7 +148,6 @@ rules:
 
   # Variables
   init-declarations: off
-  no-catch-shadow: off
   no-delete-var: error
   no-label-var: error
   no-restricted-globals: off
@@ -142,7 +159,7 @@ rules:
   no-shadow-restricted-names: off
   no-undef: error
   no-undef-init: error
-  no-undefined: error
+  no-undefined: off
   no-unused-vars: error
   no-use-before-define:
     - error
@@ -191,10 +208,10 @@ rules:
   id-blacklist: off
   id-length: off
   id-match: off
+  implicit-arrow-linebreak: error
   indent:
     - error
     - tab
-  implicit-arrow-linebreak: error
   jsx-quotes: error
   key-spacing: error
   keyword-spacing: error
@@ -205,6 +222,7 @@ rules:
   max-depth: off
   max-len: off
   max-lines: off
+  max-lines-per-function: off
   max-nested-callbacks: off
   max-params: off
   max-statements: off
@@ -254,12 +272,12 @@ rules:
     - error
     - never
   padding-line-between-statements: off
+  prefer-exponentiation-operator: error
   prefer-object-spread: error
   quote-props:
     - error
     - as-needed
   quotes: error
-  require-jsdoc: off
   semi:
     - error
     - never
@@ -296,6 +314,7 @@ rules:
   no-dupe-class-members: error
   no-duplicate-imports: error
   no-new-symbol: error
+  no-restricted-exports: off
   no-restricted-imports: off
   no-this-before-super: error
   no-useless-computed-key: error
