--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
 
 	"explorer.confirmDragAndDrop": false,
 	"explorer.openEditors.visible": 0,
+	"explorer.sortOrder": "filesFirst",
 
 	"files.trimTrailingWhitespace": true,
 	"files.insertFinalNewline": true,
