--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -1,3 +1,5 @@
+root: true
+
 parser: "@typescript-eslint/parser"
 
 parserOptions:
@@ -394,7 +396,7 @@ rules:
   "@typescript-eslint/no-non-null-asserted-optional-chain": warn
   "@typescript-eslint/no-non-null-assertion": warn
   "@typescript-eslint/no-parameter-properties": warn
-  "@typescript-eslint/no-require-imports": warn
+  "@typescript-eslint/no-require-imports": off
   "@typescript-eslint/no-this-alias": warn
   # "@typescript-eslint/no-throw-literal": warn
   "@typescript-eslint/no-type-alias": off
