--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -12,6 +12,8 @@ window:
 
   decorations: full
 
+  dynamic_title: true
+
 draw_bold_text_with_bright_colors: true
 
 font:
@@ -66,7 +68,7 @@ colors:
     cyan:    '0x8abeb7'
     white:   '0xc5c8c6'
 
-visual_bell:
+bell:
   duration: 0
 
 background_opacity: 1.0
@@ -93,8 +95,6 @@ mouse:
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
-dynamic_title: true
-
 cursor:
   style: Block
 
@@ -110,7 +110,7 @@ key_bindings:
   - { key: Insert,   mods: Shift,   action: PasteSelection               }
   - { key: Key0,     mods: Control, action: ResetFontSize                }
   - { key: Equals,   mods: Control, action: IncreaseFontSize             }
-  - { key: Subtract, mods: Control, action: DecreaseFontSize             }
+  - { key: NumpadSubtract, mods: Control, action: DecreaseFontSize             }
   - { key: Home,                    chars: "\x1bOH",   mode: AppCursor   }
   - { key: Home,                    chars: "\x1b[H",   mode: ~AppCursor  }
   - { key: End,                     chars: "\x1bOF",   mode: AppCursor   }
